Production Ready security measure, CSP fix need to be done

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "bookmarks",
     "storage", 
     "notifications",
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
   "host_permissions": [
     "https://*.googleapis.com/*",
